initial/src/main/pymjc/parser/.antlr/PYMJCParser.py
# Generated from c:\Users\tranq\workspace\HK221\PPL\PyMJC\initial\src\main\pymjc\parser\PYMJC.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PYMJCParser ( Parser ):

    grammarFileName = "PYMJC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", 
                     "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", 
                     "':='", "'='", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "';'", "'.'", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'boolean'", "'int'", "'float'", "'string'", 
                     "'void'", "'true'", "'false'", "'nil'", "'class'", 
                     "'new'", "'final'", "'static'", "'extends'", "'this'", 
                     "'break'", "'continue'", "'do'", "'else'", "'if'", 
                     "'then'", "'for'", "'to'", "'downto'", "'return'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_COMMENT", "LINE_COMMENT", "ADD", 
                      "SUB", "MUL", "DIV", "DEV_INT", "MOD", "NOT_EQUAL", 
                      "EQUAL", "LT", "GT", "LTE", "GTE", "OR", "AND", "NOT", 
                      "CONCAT", "ASSIGN", "ASSIGN_ATT", "LQB", "RQR", "LB", 
                      "RB", "LP", "RP", "SEMI", "DOT", "CM", "INT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STR_LIT", "BOOLEAN", "INT", 
                      "FLOAT", "STRING", "VOID", "TRUE", "FALSE", "NIL", 
                      "CLASS", "NEW", "FINAL", "STATIC", "EXTENDS", "THIS", 
                      "BREAK", "CONTINUE", "DO", "ELSE", "IF", "THEN", "FOR", 
                      "TO", "DOWNTO", "RETURN", "ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_decl = 1
    RULE_member = 2
    RULE_attribute_decl = 3
    RULE_immutable = 4
    RULE_mutable = 5
    RULE_var_decl_att = 6
    RULE_var_decl = 7
    RULE_method_decl = 8
    RULE_params = 9
    RULE_for_stmt = 10
    RULE_assign_stmt = 11
    RULE_if_stmt = 12
    RULE_method_invocation = 13
    RULE_list_exp = 14
    RULE_block_stmt = 15
    RULE_stmt = 16
    RULE_exp = 17
    RULE_lhs = 18
    RULE_literal = 19
    RULE_bktype = 20
    RULE_array_lit = 21
    RULE_listID = 22
    RULE_ids_att = 23

    ruleNames =  [ "program", "class_decl", "member", "attribute_decl", 
                   "immutable", "mutable", "var_decl_att", "var_decl", "method_decl", 
                   "params", "for_stmt", "assign_stmt", "if_stmt", "method_invocation", 
                   "list_exp", "block_stmt", "stmt", "exp", "lhs", "literal", 
                   "bktype", "array_lit", "listID", "ids_att" ]

    EOF = Token.EOF
    BLOCK_COMMENT=1
    LINE_COMMENT=2
    ADD=3
    SUB=4
    MUL=5
    DIV=6
    DEV_INT=7
    MOD=8
    NOT_EQUAL=9
    EQUAL=10
    LT=11
    GT=12
    LTE=13
    GTE=14
    OR=15
    AND=16
    NOT=17
    CONCAT=18
    ASSIGN=19
    ASSIGN_ATT=20
    LQB=21
    RQR=22
    LB=23
    RB=24
    LP=25
    RP=26
    SEMI=27
    DOT=28
    CM=29
    INT_LIT=30
    FLOAT_LIT=31
    BOOL_LIT=32
    STR_LIT=33
    BOOLEAN=34
    INT=35
    FLOAT=36
    STRING=37
    VOID=38
    TRUE=39
    FALSE=40
    NIL=41
    CLASS=42
    NEW=43
    FINAL=44
    STATIC=45
    EXTENDS=46
    THIS=47
    BREAK=48
    CONTINUE=49
    DO=50
    ELSE=51
    IF=52
    THEN=53
    FOR=54
    TO=55
    DOWNTO=56
    RETURN=57
    ID=58
    WS=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PYMJCParser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PYMJCParser.Class_declContext)
            else:
                return self.getTypedRuleContext(PYMJCParser.Class_declContext,i)


        def getRuleIndex(self):
            return PYMJCParser.RULE_program




    def program(self):

        localctx = PYMJCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.class_decl()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PYMJCParser.CLASS):
                    break

            self.state = 53
            self.match(PYMJCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PYMJCParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PYMJCParser.ID)
            else:
                return self.getToken(PYMJCParser.ID, i)

        def LP(self):
            return self.getToken(PYMJCParser.LP, 0)

        def RP(self):
            return self.getToken(PYMJCParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(PYMJCParser.EXTENDS, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PYMJCParser.MemberContext)
            else:
                return self.getTypedRuleContext(PYMJCParser.MemberContext,i)


        def getRuleIndex(self):
            return PYMJCParser.RULE_class_decl




    def class_decl(self):

        localctx = PYMJCParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(PYMJCParser.CLASS)
            self.state = 56
            self.match(PYMJCParser.ID)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PYMJCParser.EXTENDS:
                self.state = 57
                self.match(PYMJCParser.EXTENDS)
                self.state = 58
                self.match(PYMJCParser.ID)


            self.state = 61
            self.match(PYMJCParser.LP)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PYMJCParser.BOOLEAN) | (1 << PYMJCParser.INT) | (1 << PYMJCParser.FLOAT) | (1 << PYMJCParser.STRING) | (1 << PYMJCParser.VOID) | (1 << PYMJCParser.FINAL) | (1 << PYMJCParser.STATIC) | (1 << PYMJCParser.ID))) != 0):
                self.state = 62
                self.member()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(PYMJCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl(self):
            return self.getTypedRuleContext(PYMJCParser.Attribute_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(PYMJCParser.Method_declContext,0)


        def getRuleIndex(self):
            return PYMJCParser.RULE_member




    def member(self):

        localctx = PYMJCParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.attribute_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.method_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutable(self):
            return self.getTypedRuleContext(PYMJCParser.MutableContext,0)


        def immutable(self):
            return self.getTypedRuleContext(PYMJCParser.ImmutableContext,0)


        def getRuleIndex(self):
            return PYMJCParser.RULE_attribute_decl




    def attribute_decl(self):

        localctx = PYMJCParser.Attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_decl)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.mutable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.immutable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_att(self):
            return self.getTypedRuleContext(PYMJCParser.Var_decl_attContext,0)


        def SEMI(self):
            return self.getToken(PYMJCParser.SEMI, 0)

        def FINAL(self):
            return self.getToken(PYMJCParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(PYMJCParser.STATIC, 0)

        def getRuleIndex(self):
            return PYMJCParser.RULE_immutable




    def immutable(self):

        localctx = PYMJCParser.ImmutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_immutable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PYMJCParser.STATIC:
                    self.state = 78
                    self.match(PYMJCParser.STATIC)


                self.state = 81
                self.match(PYMJCParser.FINAL)
                pass

            elif la_ == 2:
                self.state = 82
                self.match(PYMJCParser.FINAL)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PYMJCParser.STATIC:
                    self.state = 83
                    self.match(PYMJCParser.STATIC)


                pass


            self.state = 88
            self.var_decl_att()
            self.state = 89
            self.match(PYMJCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_att(self):
            return self.getTypedRuleContext(PYMJCParser.Var_decl_attContext,0)


        def SEMI(self):
            return self.getToken(PYMJCParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(PYMJCParser.STATIC, 0)

        def getRuleIndex(self):
            return PYMJCParser.RULE_mutable




    def mutable(self):

        localctx = PYMJCParser.MutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mutable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PYMJCParser.STATIC:
                self.state = 91
                self.match(PYMJCParser.STATIC)


            self.state = 94
            self.var_decl_att()
            self.state = 95
            self.match(PYMJCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_attContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bktype(self):
            return self.getTypedRuleContext(PYMJCParser.BktypeContext,0)


        def ids_att(self):
            return self.getTypedRuleContext(PYMJCParser.Ids_attContext,0)


        def getRuleIndex(self):
            return PYMJCParser.RULE_var_decl_att




    def var_decl_att(self):

        localctx = PYMJCParser.Var_decl_attContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl_att)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.bktype()
            self.state = 98
            self.ids_att()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bktype(self):
            return self.getTypedRuleContext(PYMJCParser.BktypeContext,0)


        def listID(self):
            return self.getTypedRuleContext(PYMJCParser.ListIDContext,0)


        def FINAL(self):
            return self.getToken(PYMJCParser.FINAL, 0)

        def getRuleIndex(self):
            return PYMJCParser.RULE_var_decl




    def var_decl(self):

        localctx = PYMJCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PYMJCParser.FINAL:
                self.state = 100
                self.match(PYMJCParser.FINAL)


            self.state = 103
            self.bktype()
            self.state = 104
            self.listID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bktype(self):
            return self.getTypedRuleContext(PYMJCParser.BktypeContext,0)


        def ID(self):
            return self.getToken(PYMJCParser.ID, 0)

        def LB(self):
            return self.getToken(PYMJCParser.LB, 0)

        def params(self):
            return self.getTypedRuleContext(PYMJCParser.ParamsContext,0)


        def RB(self):
            return self.getToken(PYMJCParser.RB, 0)

        def STATIC(self):
            return self.getToken(PYMJCParser.STATIC, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(PYMJCParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return PYMJCParser.RULE_method_decl




    def method_decl(self):

        localctx = PYMJCParser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PYMJCParser.STATIC:
                    self.state = 106
                    self.match(PYMJCParser.STATIC)


                self.state = 109
                self.bktype()
                self.state = 110
                self.match(PYMJCParser.ID)
                self.state = 111
                self.match(PYMJCParser.LB)
                self.state = 112
                self.params()
                self.state = 113
                self.match(PYMJCParser.RB)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PYMJCParser.LP:
                    self.state = 114
                    self.block_stmt()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(PYMJCParser.ID)
                self.state = 118
                self.match(PYMJCParser.LB)
                self.state = 119
                self.params()
                self.state = 120
                self.match(PYMJCParser.RB)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PYMJCParser.LP:
                    self.state = 121
                    self.block_stmt()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PYMJCParser.Var_declContext)
            else:
                return self.getTypedRuleContext(PYMJCParser.Var_declContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PYMJCParser.SEMI)
            else:
                return self.getToken(PYMJCParser.SEMI, i)

        def getRuleIndex(self):
            return PYMJCParser.RULE_params




    def params(self):

        localctx = PYMJCParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PYMJCParser.BOOLEAN) | (1 << PYMJCParser.INT) | (1 << PYMJCParser.FLOAT) | (1 << PYMJCParser.STRING) | (1 << PYMJCParser.VOID) | (1 << PYMJCParser.FINAL) | (1 << PYMJCParser.ID))) != 0):
                self.state = 126
                self.var_decl()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PYMJCParser.SEMI:
                    self.state = 127
                    self.match(PYMJCParser.SEMI)
                    self.state = 128
                    self.var_decl()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PYMJCParser.FOR, 0)

        def ID(self):
            return self.getToken(PYMJCParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PYMJCParser.ASSIGN, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PYMJCParser.ExpContext)
            else:
                return self.getTypedRuleContext(PYMJCParser.ExpContext,i)


        def DO(self):
            return self.getToken(PYMJCParser.DO, 0)

        def stmt(self):
            return self.getTypedRuleContext(PYMJCParser.StmtContext,0)


        def TO(self):
            return self.getToken(PYMJCParser.TO, 0)

        def DOWNTO(self):
            return self.getToken(PYMJCParser.DOWNTO, 0)

        def getRuleIndex(self):
            return PYMJCParser.RULE_for_stmt




    def for_stmt(self):

        localctx = PYMJCParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_for_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(PYMJCParser.FOR)
            self.state = 137
            self.match(PYMJCParser.ID)
            self.state = 138
            self.match(PYMJCParser.ASSIGN)
            self.state = 139
            self.exp(0)
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==PYMJCParser.TO or _la==PYMJCParser.DOWNTO):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 141
            self.exp(0)
            self.state = 142
            self.match(PYMJCParser.DO)
            self.state = 143
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(PYMJCParser.ExpContext,0)


        def lhs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PYMJCParser.LhsContext)
            else:
                return self.getTypedRuleContext(PYMJCParser.LhsContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(PYMJCParser.ASSIGN)
            else:
                return self.getToken(PYMJCParser.ASSIGN, i)

        def getRuleIndex(self):
            return PYMJCParser.RULE_assign_stmt




    def assign_stmt(self):

        localctx = PYMJCParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 145
                    self.lhs()
                    self.state = 146
                    self.match(PYMJCParser.ASSIGN)

                else:
                    raise NoViableAltException(self)
                self.state = 150 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 152
            self.exp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PYMJCParser.IF, 0)

        def exp(self):
            return self.getTypedRuleContext(PYMJCParser.ExpContext,0)


        def THEN(self):
            return self.getToken(PYMJCParser.THEN, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PYMJCParser.StmtContext)
            else:
                return self.getTypedRuleContext(PYMJCParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(PYMJCParser.ELSE, 0)

        def getRuleIndex(self):
            return PYMJCParser.RULE_if_stmt




    def if_stmt(self):

        localctx = PYMJCParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(PYMJCParser.IF)
            self.state = 155
            self.exp(0)
            self.state = 156
            self.match(PYMJCParser.THEN)
            self.state = 157
            self.stmt()
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 158
                self.match(PYMJCParser.ELSE)
                self.state = 159
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_invocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(PYMJCParser.ExpContext,0)


        def DOT(self):
            return self.getToken(PYMJCParser.DOT, 0)

        def ID(self):
            return self.getToken(PYMJCParser.ID, 0)

        def LB(self):
            return self.getToken(PYMJCParser.LB, 0)

        def RB(self):
            return self.getToken(PYMJCParser.RB, 0)

        def list_exp(self):
            return self.getTypedRuleContext(PYMJCParser.List_expContext,0)


        def getRuleIndex(self):
            return PYMJCParser.RULE_method_invocation




    def method_invocation(self):

        localctx = PYMJCParser.Method_invocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_method_invocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.exp(0)
            self.state = 163
            self.match(PYMJCParser.DOT)
            self.state = 164
            self.match(PYMJCParser.ID)
            self.state = 165
            self.match(PYMJCParser.LB)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PYMJCParser.ADD) | (1 << PYMJCParser.SUB) | (1 << PYMJCParser.NOT) | (1 << PYMJCParser.LB) | (1 << PYMJCParser.LP) | (1 << PYMJCParser.INT_LIT) | (1 << PYMJCParser.FLOAT_LIT) | (1 << PYMJCParser.BOOL_LIT) | (1 << PYMJCParser.STR_LIT) | (1 << PYMJCParser.NEW) | (1 << PYMJCParser.THIS) | (1 << PYMJCParser.ID))) != 0):
                self.state = 166
                self.list_exp()


            self.state = 169
            self.match(PYMJCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_expContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(PYMJCParser.ExpContext,0)


        def CM(self):
            return self.getToken(PYMJCParser.CM, 0)

        def list_exp(self):
            return self.getTypedRuleContext(PYMJCParser.List_expContext,0)


        def getRuleIndex(self):
            return PYMJCParser.RULE_list_exp




    def list_exp(self):
